Fixing frequency of newsletter.

--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@ tips and overall general information we have found useful.</p>
 	
 	<dt>Is there a neighborhood newsletter and how frequently is it published?</dt>
 	<dd><p>Yes. The <b><i>Twin Creeks Connection</i></b> is in its second year 
-	of production and is mailed out on a quarterly (seasonal) basis. In the future, the 
+	of production and is mailed out on a biannual basis. In the future, the 
 	newsletters will only be available from the website unless a homeowner 
 	makes other arrangements for receiving it. For current and 
 	previous issues, please visit the <a href="newsletters.html">newsletter</a> 
