--- a/new-residents.html
+++ b/new-residents.html
@@ -3,252 +3,86 @@ layout: inside
 category: new-residents
 title: Information for New Residents
 ---
-&nbsp;<p style="margin-bottom: 3px"><b>
-<font size="4" color="#336699">Welcome to Twin Creeks!</font></b><br>
-Whether you have chosen a new home in Brookstone or Fieldstone,&nbsp;welcome 
+
+<h3>Welcome to Twin Creeks!</h3>
+
+<p>Whether you have chosen a new home in Brookstone or Fieldstone,&nbsp;welcome 
 to Twin Creeks Homeowners Association (TCHOA) and welcome to the
 neighborhood. 
 Now that you have moved in, here is an assortment of information that 
-may be helpful! </p>
-<p>&nbsp;</p>
-		<div align="left">
-			<img height="20" src="images/subheader-utilities.jpg" width="528" alt="Utilities"><p>&nbsp;</p>
-			<table cellSpacing="0" cellPadding="0" width="829" border="0" bgcolor="#FFFFFF">
-				<tr>
-					<td vAlign="top" width="250" bgcolor="#FFFFFF" bordercolor="#FFFFFF">
-					<div align="left">
-						<font face="Verdana, Arial, Helvetica, sans-serif" color="#999999" size="2">
-						<b><font color="#0000FF">ELECTRIC</font></b></font></div>
-					<div align="left">
-						<table cellSpacing="0" cellPadding="0" width="250" border="0">
-							<tr>
-								<td vAlign="top" width="50">
-								<font face="Verdana">
-								<span style="text-transform: uppercase">
-								<img height="44" src="images/icon-electric.jpg" width="44"></span></font></td>
-								<td>
-								<span style="text-transform: uppercase">
-								<b><font face="Verdana" size="1">
-								<a href="http://www.ipalco.com">
-								Indianapolis Power &amp; Light</a></font></b><font face="Verdana" size="1"><br>
-								</font></span>
-								<font face="Verdana" size="1">One 
-								Monument Circle<br>
-								Indianapolis, IN&nbsp;&nbsp;46204<span style="text-transform: uppercase"><br>
-								</span></font>
-								<font size="1" face="Verdana">
-								1-888-261-8222 </font></td>
-							</tr>
-						</table>
-						&nbsp;</div>
-					<div align="left">
-						<font face="Verdana, Arial, Helvetica, sans-serif" color="#999999" size="2">
-						<b><font color="#0000FF">WATER</font></b></font></div>
-					<div align="left">
-						<table cellSpacing="0" cellPadding="0" width="250" border="0">
-							<tr>
-								<td vAlign="top" width="50" height="49">
-								<img height="44" src="images/icon-water.jpg" width="44"></td>
-								<td height="49"><b>
-								<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
-								<a href="http://www.iwcr.com/USFIWSplash.aspx">INDIANAPOLIS WATER CO.</a></font></b><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><br>
-								P.O. Box 1990<br>
-								Indianapolis, IN&nbsp;&nbsp;46168</font><font face="Verdana, Arial, Helvetica, sans-serif" color="#999999" size="1"><br>
-								</font>
-								<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
-								(317) 631-1431</font></td>
-							</tr>
-						</table>
-						&nbsp;</div>
-					<div align="left">
-						<div align="left">
-							<div align="left">
-								<font face="Verdana, Arial, Helvetica, sans-serif" color="#999999" size="2">
-								<b><font color="#0000FF">TELEPHONE</font></b></font></div>
-						</div>
-					</div>
-					<div align="left">
-						<div align="left">
-							<div align="left">
-								<table cellSpacing="0" cellPadding="0" width="250" border="0">
-									<tr>
-										<td vAlign="top" width="50" height="49">
-										<img height="44" src="images/icon-phone.jpg" width="44"></td>
-										<td height="49"><b>
-										<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
-										<a href="http://www.sbc.com">SBC</a></font></b><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><br>
-										30 South Wacker Drive<br>
-										34th Floor<br>
-										Chicago, IL&nbsp;&nbsp;60606<br>
-										1-800-742-8771</font></td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</div>
-					</td>
-					<td vAlign="top" width="475" bgcolor="#FFFFFF">
-					<div align="left">
-						<div align="left">
-							<div align="left">
-								<font face="Verdana, Arial, Helvetica, sans-serif" color="#999999" size="2">
-								<b><font color="#0000FF">NATURAL GAS</font></b></font></div>
-						</div>
-					</div>
-					<div align="left">
-						<div align="left">
-							<div align="left">
-								<table cellSpacing="0" cellPadding="0" width="250" border="0">
-									<tr>
-										<td vAlign="top" width="50">
-										<img height="44" src="images/icon-gas.jpg" width="44"></td>
-										<td><b>
-										<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
-										<a href="http://www.citizensgas.com">
-										CITIZENS GAS</a></font></b><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><br>
-										P.O. Box 7056<br>
-										Evansville, IN&nbsp;&nbsp;47702</font><font face="Verdana, Arial, Helvetica, sans-serif" color="#999999" size="1"><br>
-										</font>
-										<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
-										1-800-GAS-4217</font></td>
-									</tr>
-								</table>
-								&nbsp;</div>
-						</div>
-					</div>
-					<div align="left">
-					<div align="left">
-						<div align="left">
-							<div align="left">
-								<font face="Verdana, Arial, Helvetica, sans-serif" color="#999999" size="2">
-								<b><font color="#0000FF">CABLE 
-								TELEVISION</font></b></font></div>
-						</div>
-					</div>
-					<div align="left">
-						<div align="left">
-							<div align="left">
-								<table cellSpacing="0" cellPadding="0" width="250" border="0">
-									<tr>
-										<td vAlign="top" width="50">
-										<img height="44" src="images/icon-tv.jpg" width="44"></td>
-										<td><font face="Verdana, Arial, Helvetica, sans-serif" size="1">
-										<b>
-										<a href="http://www.comcast.com">
-										COMCAST</a></b></font><table style="BORDER-COLLAPSE: collapse" cellSpacing="0" cellPadding="0" width="535" align="center" bgColor="white" border="0" xmlns:df="urn:XsltExtensions" xmlns:ms="urn:schemas-microsoft-com:xslt">
-											<form name="CenterDetails0" method="post" action="http://www.comcast.com/Membership/CenterDetails.ashx">
-												<tr>
-													<td class="rightRule" vAlign="top" width="500">
-													<font face="Verdana" size="1">
-													3085 N. High School 
-													Road</font><p>
-													<font face="Verdana" size="1">
-													Speedway, IN&nbsp; 
-													46224</font></p>
-													<p>
-													<font face="Verdana" size="1">
-													1-800-COMCAST</font></td>
-												</tr>
-											</form>
-										</table>
-										</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</div>
-						<div align="left">
-							<div align="left">&nbsp;</div></div>
-					</div>
-					<div align="left">
-						<div align="left">
-							<div align="left">
-								<b>
-								<font face="Verdana, Arial, Helvetica, sans-serif" color="#0000FF">
-								OTHER SERVICES:</font></b></div>
-						</div>
-					</div>
-					<div align="left">
-						<div align="left">
-							<div align="left">
-								<table cellSpacing="0" cellPadding="0" width="250" border="0">
-									<tr>
-										<td vAlign="top" width="50">
-										&nbsp;</td>
-										<td><u><b>
-										<font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#329832">
-										REPUBLIC TRASH</font></b></u><table style="BORDER-COLLAPSE: collapse" cellSpacing="0" cellPadding="0" width="535" align="center" bgColor="white" border="0" xmlns:df="urn:XsltExtensions" xmlns:ms="urn:schemas-microsoft-com:xslt">
-											<form name="CenterDetails" method="post" action="http://www.comcast.com/Membership/CenterDetails.ashx">
-												<tr>
-													<td class="rightRule" vAlign="top">
-													<span style="text-transform: uppercase; text-decoration: underline">
-													<b>
-													<font face="Verdana" size="1" color="#339933">
-													<a href="http://www.indystar.com/apps/pbcs.dll/frontpage">
-													Indianapolis Star</a></font></b></span><p>
-													<span style="text-transform: uppercase; text-decoration: underline">
-													<b>
-													<font face="Verdana" color="#339933" size="1">
-													<a href="https://moversguide.usps.com/?referral=USPS">
-													United States Postal 
-													Service</a></font></b></span><font size="1"> 
-													(</font><font size="1" face="Verdana">Online 
-													Change of Address 
-													Form)</font></td>
-												</tr>
-											</form>
-										</table>
-										</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</div>
-					</td>
-				</tr>
-			</table>
+may be helpful!</p>
+
+
+<h4>Utilities</h4>
+
+<dl class="utilities">
+	<dt>Electricity</dt>
+	<dd><img height="44" src="images/icon-electric.jpg" width="44">
+		<div class="vcard">
+			<a href="http://www.iplpower.com/">Indianapolis Power &amp; Light Company</a>
+			<div class="adr">
+				<div class="street">One Monument Circle</div>
+				<div>P.O. Box 1594</div>
+				<div>Indianapolis, Indiana 46206-1595</div>
+			</div>
+			<div class="tel">(888) 261-8222</div>
 		</div>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><b><font color="#336699" size="3">TRASH PICK-UP:</font></b></p>
-<p><font size="2" color="#000000">Curb side trash pickup for Twin Creek 
-residents is every Thursday morning at 7:00a.m. </font>
-<font color="#000000">Each household is allowed up to 10 bags of&nbsp;&nbsp;&nbsp; 
-acceptable trash per week. For additional information about trash 
-pick-up please click on the following link:</font></p>
-<p align="center" style="margin-top: 3px">
-<a href="http://www.indygov.org/eGov/City/DPW/Residential/Trash/home.htm">
-<font color="#000000">City of Indianapolis Department of Public Works - 
-Trash Pick-up</font></a></p>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
-<p><span style="text-transform: uppercase"><b>
-<font color="#336699" size="3"><var style="font-style: normal">
-Heavy trash pick-up:</var></font></b></span></p>
-<p><font color="#000000">Each household is allowed to set out two (2) 
-heavy trash items a month on your normal Thursday trash pick-up days. 
-For additional&nbsp;&nbsp; information about what is considered heavy 
-trash, please click on the following link:</font></p>
-<p align="center" style="margin-top: 3px"><font color="#000000">
-<a href="http://www.indygov.org/eGov/City/DPW/Residential/Trash/heavy.htm">
-City of Indianapolis Department of Public Works - Heavy Trash</a></font></p>
-<p align="left">&nbsp;</p>
-<p align="left">&nbsp;</p>
-<p><span style="text-transform: uppercase"><b>
-<font color="#336699" size="3">Recycling Service:</font></b></span></p>
-<p><font color="#0000FF">I</font><font color="#000000">ndianapolis 
-provides residents many options for household recycling. A curb side 
-recycling service can be obtained for a $5 a month </font></p>
-<p><font color="#000000">fee or you can drop off your recyclables at 
-several locations around the city. The closest location for basic 
-recyclables is located at Northwestway Park. For additional information, please 
-click on the following link:</font></p>
-<p align="center" style="margin-top: 3px"><font color="#0000FF" face="Verdana">
-<a href="http://www.indygov.org/eGov/City/DPW/Residential/Recycling/home.htm">
-City of Indianapolis Department of Public Works - Recycling</a></font></p>
-<p align="center">&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+		</dd>
+
+	<dt>Natural Gas and Water</dt>
+	<dd><img height="44" src="images/icon-gas.jpg" width="44"> <img height="44" src="images/icon-water.jpg" width="44">
+		<div class="vcard">
+			<a href="http://www.citizensenergygroup.com/">Citizens Energy Group</a>
+			<div class="adr">
+				<div>P.O. Box 7056</div>
+				<div>Indianapolis, IN 46207-7056</div>
+			</div>
+			<div class="tel">(317) 924-3311</div>
+		</div>
+		</dd>
+	
+	<dt>Telephone</dt>
+	<dd><img height="44" src="images/icon-phone.jpg" width="44">
+		<div class="vcard">
+			<a href="http://att.com/">AT&amp;T</a>
+		</div>
+		</dd>
+
+	<dt>Cable Television</dt>
+	<dd><img height="44" src="images/icon-tv.jpg" width="44">
+		<div class="vcard">
+			<a href="http://www.comcast.com/">Comcast</a>
+			<div class="adr">
+				<div>3085 N High School Rd</div>
+				<div>Indianapolis, IN 46224</div>
+			</div>
+			<div class="tel">800-934-6489</div>
+		</div>
+		</dd>
+
+	<dt>Other Services</dt>
+	<dd>
+		<ul>
+			<li>Republic Trash</li>
+			<li><a href="http://www.indystar.com/">The Indianapolis Star</a></li>
+			<li><a href="https://moversguide.usps.com/?referral=USPS">United States Postal Service</a></li>
+		</ul>
+	</dd>
+
+</dl>
+
+<h3>Trash Pick-Up</h3>
+
+<p>Curb side trash pickup for Twin Creek residents is every Thursday morning at 7:00a.m. Each household is allowed up to 10 bags of acceptable trash per week. For additional information about trash pick-up please click on the following link:  <a href="http://www.indygov.org/eGov/City/DPW/Residential/Trash/home.htm">City of Indianapolis Department of Public Works - Trash Pick-up</a></p>
+
+<h3>Heavy Trash Pick-Up</h3>
+
+<p>Each household is allowed to set out two (2) heavy trash items a month on your normal Thursday trash pick-up days. For additional   information about what is considered heavy trash, please click on the following link:  <a href="http://www.indygov.org/eGov/City/DPW/Residential/Trash/heavy.htm">City of Indianapolis Department of Public Works - Heavy Trash</a></p>
+
+<h3>Recycling Service</h3>
+
+<p>Indianapolis provides residents many options for household recycling. A curb side recycling service can be obtained for a $5 a month fee or you can drop off your recyclables at several locations around the city. The closest location for basic recyclables is located at Northwestway Park. For additional information, please click on the following link:  <a href="http://www.indygov.org/eGov/City/DPW/Residential/Recycling/home.htm">City of Indianapolis Department of Public Works - Recycling</a></p>
+
 <p><span style="text-transform: uppercase"><b>
 <font color="#336699" size="3">School District Information:</font></b></span></p>
 <p><font color="#000000">Twin Creeks is located in the Metropolitan 
