--- a/resources.html
+++ b/resources.html
@@ -3,35 +3,24 @@ layout: inside
 category: resources
 title: Resources
 ---
-<table border="0" cellpadding="0" cellspacing="0" width="100%" height="90%">
-	<tr>
-		<td width="100%" height="100%" valign="top">
-						<p style="margin-top: 6px; margin-bottom: 6px">
-						<font size="4" color="#336699"><b>Paint 
-						Information:</b></font></p>
-<p style="margin-left: 4px; margin-right: 4px">Listed below are the 
+
+<h4>Paint Information</h4>
+<p>Listed below are the 
 Fieldstone and Brookstone house colors that are approved by the Board 
-per original house specifications. <span style="font-family: Arial">Any 
+per original house specifications. Any 
 restoration or repair of the exterior of a home shall be performed 
 substantially in accordance with the Covenant Declaration and the original 
 	plans and specifications for the same, unless 
 	other action is approved by the Architectural Committee. Any repair 
 or alteration that is not in accordance with the original house plans 
-must </span>be pre-approved by sending in an
+must be pre-approved by sending in an
 <a href="2009%20Arch%20Form.pdf">Architectural Approval Form</a>. 
 Please <a href="mailto:wyattsmt@aol.com">email the Board</a> 
 with any questions prior to beginning repairs or alterations.</p>
-<p>&nbsp;</p>
-<p align="center"><span style="text-transform: uppercase"><b>
-<font face="Arial Rounded MT Bold" color="#FF6600" style="font-size: 11pt">
-Porter Paint Chart</font><font face="Arial Rounded MT Bold" color="#FF0000" style="font-size: 11pt">
-</font></b></span></p>
-<p align="center" style="margin-bottom: 6px">
-<span style="text-transform: uppercase"><b>
-<font face="Arial Rounded MT Bold" color="#336699" style="font-size: 11pt">
-for Fieldstone and Brookstone</font></b></span></p>
-<div align="center">
+
+
 	<table border="2" width="68%" cellpadding="2" bordercolordark="#999999" bordercolorlight="#999999">
+		<caption>Porter Paint Chart for Fieldstone and Brookstone</caption>
 		<tr align="center">
 			<td width="195" align="left" valign="top">
 			<p class="MsoNormal" align="center" style="margin-bottom: 4px">
@@ -152,231 +141,40 @@ for Fieldstone and Brookstone</font></b></span></p>
 			<p>* Color List Updated June 2006</td>
 		</tr>
 	</table>
-	<p>&nbsp;</p>
-						<p style="margin-top: 6px; margin-bottom: 6px" align="left">
-						<font size="4" color="#336699"><b>Mailbox 
-						Information:</b></font></p>
-	<p style="margin-top: 6px; margin-bottom: 6px" align="left">
-	<font face="Arial" color="#0000ff" size="2">
-	<span class="745055820-21042006">TCHOA contracts with Address Art 
-	for Mailboxes and Mailbox Posts. The price for our community is $66&nbsp; 
-	plus tax and $15 for installation. You can also contact Joe Peeler 
-	at 255-2500 for post installation. Please feel free to
+
+	<h4>Mailbox Information</h4>
+	
+	<p>Your mailbox is often the first impression someone gets of your house, so make it a positive one by keeping it in top form and when the time comes, replacing it.</p>
+
+	<h5>Suppliers</h5>
+	
+	<img border="0" width="96" height="56" src="images/address-art.jpg" style="float: left;" alt="">
+	<p>TCHOA contracts with Address Art and Mailbox Solutions for Mailboxes and Mailbox Posts. The price for our community is $66 
+	plus tax and $15 for installation. Please feel free to
 	<a href="mailto:wyattsmt@aol.com">email the Board</a> if 
-	you have any questions or need additional information.</span></font></p>
-	<p align="left">&nbsp;</p>
-	<p class="MsoNormal" align="center" style="text-align:center"><b>
-	<span style="font-size:13.0pt;font-family:Arial">THAT FIRST 
-	IMPRESSION</span></b></p>
-	<p class="MsoNormal"><span style="font-family: Arial">
-	<font size="2">&nbsp;</font></span></p>
-	<p class="MsoNormal" align="center" style="text-align: center; margin-left: 3px; margin-right: 3px">
-	<span style="font-size: 11pt; font-family: Arial">Often situated in 
-	front of your home, the mailbox makes a <i>First Impression</i>.
-	</span></p>
-	<p class="MsoNormal" align="center" style="margin-left: 3px; margin-right: 3px">
-	<span style="font-size: 11pt; font-family: Arial">As the season of 
-	Spring approaches and our thoughts focus on the outdoors we:</span></p>
-	<p class="MsoNormal" align="center" style="text-align: left; margin-left: 3px; margin-right: 3px; margin-top: 6px">
-	<span style="font-size: 11pt; font-family: Arial">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ö 
-	plant grass seed and fertilize</span></p>
-	<p class="MsoNormal" align="left" style="margin-left: 3px; margin-right: 3px">
-	<span style="font-size: 11pt; font-family: Arial">&nbsp;&nbsp;&nbsp; 
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ö admire budding trees and flowering 
-	bulbs</span></p>
-	<p class="MsoNormal" align="left" style="margin-left: 3px; margin-right: 3px">
-	<span style="font-size: 11pt; font-family: Arial">
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ö sweep away winter debris</span></p>
-	<p class="MsoNormal" align="center" style="text-align: center; margin-left: 3px; margin-right: 3px; margin-top: 6px">
-	<span style="font-size: 11pt; font-family: Arial">Make your mailbox 
-	reflect the same distinctive taste around your home.&nbsp;Take </span>
-	</p>
-	<p class="MsoNormal" align="center" style="text-align: center; margin-left: 3px; margin-right: 3px">
-	<span style="font-size: 11pt; font-family: Arial">a moment to 
-	inspect and notice this simple product which 
-	</span></p>
-	<p class="MsoNormal" align="center" style="text-align: center; margin-left: 3px; margin-right: 3px">
-	<span style="font-size: 11pt; font-family: Arial">enhances the entrance to your home.</span></p>
-	<p class="MsoNormal" align="center" style="text-align:center">
-	<span style="font-family: Arial">&nbsp;</span></p>
-	<p class="MsoNormal" align="center" style="text-align:center"><i>
-	<span style="font-family:Arial">Address Art supplies custom 
-	mailboxes.&nbsp; </span></i></p>
-	<p class="MsoNormal" align="center" style="text-align:center"><i>
-	<span style="font-family:Arial">Should you have questions regarding 
-	mailbox standards or maintenance,</span></i></p>
-	<p class="MsoNormal" align="center" style="text-align:center">
-	<span style="font-size:13.0pt;font-family:Arial">&nbsp;</span></p>
-	<p class="MsoNormal" align="center" style="text-align:center"><i>
-	<span style="font-size:13.0pt;font-family:Arial">Call:</span></i><span style="font-size:13.0pt;font-family:Arial">
-	<b>317-254-1508</b> / </span><i><span style="font-family:Arial">
-	email:</span></i><span style="font-size:13.0pt;
-font-family:Arial"> <b>
-	<a style="color: blue; text-decoration: underline; text-underline: single" href="mailto:mailbox@addressart.com">
-	mailbox@addressart.com</a></b></span></p>
-	<p class="MsoNormal" align="center" style="text-align:center"><i>
-	<span style="font-size:13.0pt;font-family:Arial">Visit the website<b>:</b></span></i><b><span style="font-size:13.0pt;font-family:Arial">&nbsp; 
-	www.addressart.com.</span></b></p>
-	<p class="MsoNormal" align="center" style="text-align:center">
-	<span style="font-family:Verdana;color:black"><!--[if gte vml 1]><v:shapetype
-id="_x0000_t75" coordsize="21600,21600" o:spt="75" o:preferrelative="t"
-path="m@4@5l@4@11@9@11@9@5xe" filled="f" stroked="f">
-<v:stroke joinstyle="miter"/>
-<v:formulas>
-<v:f eqn="if lineDrawn pixelLineWidth 0"/>
-<v:f eqn="sum @0 1 0"/>
-<v:f eqn="sum 0 0 @1"/>
-<v:f eqn="prod @2 1 2"/>
-<v:f eqn="prod @3 21600 pixelWidth"/>
-<v:f eqn="prod @3 21600 pixelHeight"/>
-<v:f eqn="sum @0 0 1"/>
-<v:f eqn="prod @6 1 2"/>
-<v:f eqn="prod @7 21600 pixelWidth"/>
-<v:f eqn="sum @8 21600 0"/>
-<v:f eqn="prod @7 21600 pixelHeight"/>
-<v:f eqn="sum @10 21600 0"/>
-</v:formulas>
-<v:path o:extrusionok="f" gradientshapeok="t" o:connecttype="rect"/>
-<o:lock v:ext="edit" aspectratio="t"/>
-</v:shapetype><v:shape id="_x0000_s1025" type="#_x0000_t75" alt="" style='width:1in;
-height:42pt'>
-<v:imagedata src="Resources_files/image003.png" o:href="http://addressart.com/index/index13.gif"/>
-</v:shape><![endif]--><![if !vml]><img border=0 width=96 height=56
-src="images/address-art.jpg" v:shapes="_x0000_s1025"><![endif]></span></p>
-	<p style="margin-bottom: 6px">&nbsp;</p>
-	<p align="left" style="margin-bottom: 6px">
-	<b><font size="4" color="#336699">Twin Creeks Referrals: </font></b>
-	<font size="1" color="#336699">(The referrals below are not 
-	investigated or recommended by the TCHOA Board but are submitted by 
-	homeowners living in Twin Creeks.)</font></p>
-	<div>
-		<!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-			<p style="margin-left: 30px; margin-right: 3px" align="left">
-			<font face="Arial" size="2" color="#0000FF">Anyone having 
-			problems getting hail damage estimates and or work 
-			completed.&nbsp; My insurance referred me to: NEFF Construction, 
-			Insurance Specialists at 1-800-756-8212.&nbsp; They are located 
-			in Mooresville, IN.&nbsp; Great to work with.</font><!--msthemelist--></td></tr>
-			<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-			<p style="margin-left: 30px; margin-right: 3px; margin-top: 6px" align="left">
-			<span class="245074415-23042006"><font color="#0000FF">Moss 
-			Home Improvements at 317-577-6744 or click on this
-			<a href="Moss%20Home%20Improvement.JPG">link for their 
-			flyer.</a></font></span><!--msthemelist--></td></tr>
-		<!--msthemelist--></table>
-		<p style="margin-left: 30px; margin-right: 3px; margin-top: 6px" align="left">&nbsp;</p>
-		<p style="margin-top: 6px" align="left">
-		<font size="4" color="#336699"><b>Twin Creeks Neighborhood Service 
-		Providers: </b></font></p>
-		<p style="margin-top: 6px" align="left">&nbsp;</div>
-	<div>
-		<p style="margin-bottom: 6px">&nbsp;<b><font size="3" color="#336699">Babysitting</font></b></p>
-		<table border="1" cellpadding="3" bordercolordark="#999999" bordercolorlight="#999999">
-			<tr>
-				<td><font size="3">Katie Cookery-Dietrich</font></td>
-				<td><font size="3">14 yrs</font></td>
-				<td><font size="3">388-1888</font></td>
-			</tr>
-			<tr>
-				<td><font size="3">Aliyah Johnson</font></td>
-				<td><font size="3">13 yrs</font></td>
-				<td><font size="3">329-0906</font></td>
-			</tr>
-			<tr>
-				<td><font size="3">Maya Mariner</font></td>
-				<td><font size="3">12 yrs</font></td>
-				<td><font size="3">299-6167</font></td>
-			</tr>
-			<tr>
-				<td><font size="3">Halle Mariner</font></td>
-				<td><font size="3">11 yrs</font></td>
-				<td><font size="3">299-6167</font></td>
-			</tr>
-		</table>
-		<p>&nbsp;</p>
-		<p>&nbsp;</div>
-	<p class="MsoNormal" style="margin-bottom: 6px"><b>
-	<font size="3" color="#336699">Lawn Care &amp; Garage/Yard Clean-up</font></b></p>
-	<table border="1" cellpadding="3" bordercolordark="#999999" bordercolorlight="#999999">
-		<tr>
-			<td><font size="3">Charles Cory</font></td>
-			<td><font size="3">15 yrs</font></td>
-			<td><font size="3">328-1986</font></td>
-		</tr>
-		<tr>
-			<td><font size="3">Marcus Cory</font></td>
-			<td><font size="3">14 yrs</font></td>
-			<td><font size="3">328-1986</font></td>
-		</tr>
-		<tr>
-			<td><font size="3">Devon Kennedy</font></td>
-			<td><font size="3">17 yrs</font></td>
-			<td><font size="3">299-5858</font></td>
-		</tr>
-		<tr>
-			<td><font size="3">Dakota Tyler</font></td>
-			<td><font size="3">16 yrs</font></td>
-			<td><font size="3">290-9924</font></td>
-		</tr>
-	</table>
-	<p>&nbsp;</p>
-		<p style="margin-top: 6px" align="left">
-		<font size="4" color="#336699"><b>Important Numbers for 
-		Residents: </b></font></p>
-		<blockquote>
-			<p align="left" style="line-height: 150%">Better Business 
-			Bureau: (317)<span class="185181907-06062006">488-2222</span></p>
-			<p align="left" style="line-height: 150%">
-			<span class="185181907-06062006">Mayor's Action Line: 
-			(317)327-4MAC</span></p>
-			<p align="left" style="line-height: 150%">
-			<span class="185181907-06062006">Sheriff's non emergency 
-			number: (317)327-3264 </span><font size="2">ask for County 
-			West&nbsp;</font></p>
-	</blockquote>
-	<p align="left" style="line-height: 150%">
-	<font size="4" color="#336699"><b>TCHOA Links: </b></font></p>
-						</div>
-						<div>
-							<blockquote>
-&nbsp;<p align="left"><a href="http://p068.ezboard.com/btwincreekshoa">
-								http://p068.ezboard.com/btwincreekshoa</a></p>
-							</blockquote>
-						</div>
-</td>
-<td width="100%" height="100%" valign="top" align="center">&nbsp;<table class="newsbox" border="0" cellpadding="0" cellspacing="0" width="168">
-	<tr>
-		<td bgcolor="#B1CBE4" align="center" height="21"><b>Important 
-		Forms</b></td>
-	</tr>
-	<tr>
-		<td>
-		Forms are in PDF Format, please click on appropriate form and 
-		print out as needed.<p>&nbsp;</p>
-		<p>1.&nbsp; <a href="2009%20Arch%20Form.pdf">Architectural Approval</a></p>
-		<p>2.&nbsp; <a href="Registration%20Form.pdf">Directory Form</a></p>
-		<p>3.&nbsp; Newsletter/Email Form</p>
-		<p>4.&nbsp; Committee Form</p>
-		<p>&nbsp;</p>
-		</td>
-	</tr>
-</table>
-<p>&nbsp;</p>
-<table class="newsbox" border="0" cellpadding="0" cellspacing="0" width="168">
-	<tr>
-		<td bgcolor="#B1CBE4" align="center" height="21"><b>TCHOA News</b></td>
-	</tr>
-	<tr>
-		<td>
-		<p style="margin-left: 10px">- Anyone interested in volunteering 
-		to assist with neighborhood activities please click on the 
-		following link:</p>
-		<p align="center" style="margin-top: 4px; margin-left:10px">
-		<a title="Classifieds Request" href="mailto:wyattsmt@aol.com">
-						<img border="0" src="images/email-button.gif" width="97" height="35"></a></td>
-	</tr>
-</table>
-</td>
-</tr>
-</table>
+	you have any questions or need additional information.</p>
+	
+	<p>Address Art supplies custom mailboxes. Should you have questions regarding 
+	mailbox standards or maintenance, call 317-254-1508, email <a href="mailto:mailbox@addressart.com">mailbox@addressart.com</a>, or visit the website at <a href="http://www.addressart.com/">www.addressart.com</a>.</p>
+
+
+	<h3>Twin Creeks Neighborhood Service Providers</h3>
+	<p>If you live in the either Brookstone or Fieldstone and would like to offer services to other residents such as babysitting or lawn care, please email the board.</p>
+	
+
+	<h3>Important Phone Numbers for Residents</h3>
+	
+	<ul>
+		<li>Better Business Bureau: (317) 488-2222</li>
+		<li>Mayor's Action Line (317)327-4MAC</li>
+		<li>Sheriff's non emergency number: (317)327-3264 ask for County West</li>
+	</ul>
+
+
+	<h3>Important Forms</h3>
+	<p>Forms are in PDF Format, please click on appropriate form and 
+		print out as needed.</p>
+	<ul>
+		<li><a href="2009%20Arch%20Form.pdf">Architectural Approval</a></li>
+		<li><a href="Registration%20Form.pdf">Directory Form</a></li>
+	</ul>
