Cleaning up formatting of colors table.

--- a/resources.html
+++ b/resources.html
@@ -19,128 +19,69 @@ Please <a href="mailto:wyattsmt@aol.com">email the Board</a>
 with any questions prior to beginning repairs or alterations.</p>
 
 
-	<table border="2" width="68%" cellpadding="2" bordercolordark="#999999" bordercolorlight="#999999">
+	<table border="2" cellpadding="2" bordercolordark="#999999" bordercolorlight="#999999">
 		<caption>Porter Paint Chart for Fieldstone and Brookstone</caption>
-		<tr align="center">
-			<td width="195" align="left" valign="top">
-			<p class="MsoNormal" align="center" style="margin-bottom: 4px">
-			<span style="font-family: Georgia; font-weight: 700">
-			<font color="#336699" size="3">Fieldstone Colors</font></span></p>
-			<p class="MsoNormal" style="margin-bottom: 6px; margin-left:2px">
-			<font face="Georgia" style="font-size: 9pt">Fieldstone trim 
-			should match original exterior siding or cedar.</font></p>
-			<!--msthemelist--><table style="margin-top: 0in; margin-bottom: 0in" type="disc" border="0" cellpadding="0" cellspacing="0" width="100%">
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Antique Frost</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Ash Gray</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Buckskin Tan</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Estridge White</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Georgian Gray</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Gray</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Gray Feather</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Loam</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Moss Tint</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Mouse Gray</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Navajo Tint</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Onyx Gray</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Quarry</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Raw Linen</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				Springtime</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%"><span style="font-family:Georgia">
-				White Umber</span><!--msthemelist--></td></tr>
-			<!--msthemelist--></table>
-			<p>&nbsp;</td>
-			<td>
-			<p class="MsoNormal" align="center" style="margin-bottom: 4px">
-			<span style="font-family: Georgia; font-weight: 700">
-			<font color="#336699" size="3">Brookstone Colors</font></span></p>
-			<p align="left" style="margin-left: 2px">
-			<font style="font-size: 9pt" face="Georgia">The following 
-			colors are for doors and shutters only. House trim for 
-			Brookstone is White.</font></p>
-			<!--msthemelist--><table style="margin-top: 0in; margin-bottom: 0in" type="disc" border="0" cellpadding="0" cellspacing="0" width="100%">
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left" style="margin-top: 6px">
-				<span style="font-family:Georgia">
-				Antique Iron</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">
-				Antique White</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Bing 
-				Cherry 2</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Black 
-				Onyx</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Blue 
-				Cave</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">
-				Cathedral Gray</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">
-				Charcoal</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">
-				Chestnut</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Deep 
-				Delft</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Deep 
-				Hemlock 2</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">French 
-				Roast</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Glen 
-				Shadow</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Misty 
-				Umber</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Mossy 
-				Log</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">
-				Mountain Green</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">
-				Newport Beige</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">
-				Pebbledust</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Plum 
-				Chutney</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Salt 
-				Gray</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Tulip 
-				Poplar</span><!--msthemelist--></td></tr>
-				<!--msthemelist--><tr><td valign="baseline" width="42"><img src="fp_themes/ice174/blt.gif" width="11" height="11" hspace="15" alt="bullet"></td><td valign="top" width="100%">
-				<p align="left"><span style="font-family:Georgia">Umber 
-				Shadow</span><!--msthemelist--></td></tr>
-			<!--msthemelist--></table>
-			<p>* Color List Updated June 2006</td>
+		<thead>
+			<tr>
+				<th width="49%" align="center"><h4>Fieldstone Colors</h4></th>
+				<th width="49%" align="center"><h4>Brookstone Colors</h4></th>
+			</tr>
+		</thead>
+		<tr>
+			<td>Fieldstone trim should match original exterior siding or cedar.</td>
+			<td>The following colors are for doors and shutters only. House trim for Brookstone is White.</td>
 		</tr>
-	</table>
+		<tr valign="top">
+			<td>
+				<ul>
+					<li>Antique Frost</li>
+					<li>Ash Gray</li>
+					<li>Buckskin Tan</li>
+					<li>Estridge White</li>
+					<li>Georgian Gray</li>
+					<li>Gray</li>
+					<li>Gray Feather</li>
+					<li>Loam</li>
+					<li>Moss Tint</li>
+					<li>Mouse Gray</li>
+					<li>Navajo Tint</li>
+					<li>Onyx Gray</li>
+					<li>Quarry</li>
+					<li>Raw Linen</li>
+					<li>Springtime</li>
+					<li>White Umber</li>
+				</ul>
+			</td>
+			<td>
+				<ul>
+					<li>Antique Iron</li>
+					<li>Antique White</li>
+					<li>Bing Cherry 2</li>
+					<li>Black Onyx</li>
+					<li>Blue Cave</li>
+					<li>Cathedral Gray</li>
+					<li>Charcoal</li>
+					<li>Chestnut</li>
+					<li>Deep Delft</li>
+					<li>Deep Hemlock 2</li>
+					<li>French Roast</li>
+					<li>Glen Shadow</li>
+					<li>Misty Umber</li>
+					<li>Mossy Log</li>
+					<li>Mountain Green</li>
+					<li>Newport Beige</li>
+					<li>Pebbledust</li>
+					<li>Plum Chutney</li>
+					<li>Salt Gray</li>
+					<li>Tulip Poplar</li>
+					<li>Umber Shadow</li>
+			</ul>
+		</td>
+	</tr>
+	<tfoot>
+		<tr><td colspan="2" align="center">Color List Updated June 2006</td></tr>
+	</tfoot>
+</table>
 
 	<h4>Mailbox Information</h4>
 	
