Moving a bunch of minutes.

--- a/minutes-bylaws.html
+++ b/minutes-bylaws.html
@@ -30,34 +30,34 @@ title: Minutes &amp; Bylaws
 
 <h3>2007</h3>
 <p>
-	<a href="TCminutes/HOAMinutes.09.07.pdf">September 2007</a>,
-	<a href="TCminutes/HOAMinutes.08.07.pdf">August 2007</a>,
-	<a href="TCHOAMInutes.07.07.pdf">July 2007</a>,
-	<a href="TCminutes/HOAMinutes%2006.07.pdf">June 2007</a>,
-	<a href="Microsoft%20Word%20-%20HOAMInutes.05.07.doc.pdf">May 2007</a>,
-	<a href="Microsoft%20Word%20-%20HOAMInutes.04.07.doc.pdf">April 2007</a>,
-	<a href="February%202007%20minutes2.pdf">February 2007</a>,
-	<a href="January%202007Meeting%20Minutes.pdf">January 2007</a>
+	<a href="minutes/TCHOAMinutes.09.07.pdf">September 2007</a>,
+	<a href="minutes/TCHOAMinutes.08.07.pdf">August 2007</a>,
+	<a href="minutes/TCHOAMInutes.07.07.pdf">July 2007</a>,
+	<a href="minutes/TCHOAMinutes%2006.07.pdf">June 2007</a>,
+	<a href="minutes/Microsoft%20Word%20-%20HOAMInutes.05.07.doc.pdf">May 2007</a>,
+	<a href="minutes/Microsoft%20Word%20-%20HOAMInutes.04.07.doc.pdf">April 2007</a>,
+	<a href="minutes/February%202007%20minutes2.pdf">February 2007</a>,
+	<a href="minutes/January%202007Meeting%20Minutes.pdf">January 2007</a>
 </p>
 
 <h3>2006</h3>
 <p>
-	<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%20dec%202006%20REV.pdf">November/December 2006</a>,
-	<a href="TCHOA%20October%202006%20minutes.pdf">October 2006</a>,
-	<a href="TCHOA%20September%202006%20minutes.pdf">September 2006</a>,
-	<a href="TCHOA%20August%202006%20minutes.pdf">August 2006</a>,
-	<a href="TCHA%20July%202006%20Minutes.pdf">July 2006</a>,
-	<a href="TCHA%20Minutes,%20June%2028%202006.pdf">June 2006</a>,
-	<a href="May%202006%20TCHOA%20Minutes.pdf">May 2006</a>,
-	<a href="Twin_Creeks_Homeowner_Mtg_4-26-06.pdf">April 2006</a>,
-	<a href="Twin_Creeks_Homeowner_Mtg_Min_3-29-06.pdf">March 2006</a>,
-	<a href="Twin_Creeks_Homeowner_Mtg_Min_2-15-06.pdf">February 2006</a>
+	<a href="minutes/Twin%20Creeks%20Homeowner%20Mtg%20Min%20dec%202006%20REV.pdf">November/December 2006</a>,
+	<a href="minutes/TCHOA%20October%202006%20minutes.pdf">October 2006</a>,
+	<a href="minutes/TCHOA%20September%202006%20minutes.pdf">September 2006</a>,
+	<a href="minutes/TCHOA%20August%202006%20minutes.pdf">August 2006</a>,
+	<a href="minutes/TCHA%20July%202006%20Minutes.pdf">July 2006</a>,
+	<a href="minutes/TCHA%20Minutes,%20June%2028%202006.pdf">June 2006</a>,
+	<a href="minutes/May%202006%20TCHOA%20Minutes.pdf">May 2006</a>,
+	<a href="minutes/Twin_Creeks_Homeowner_Mtg_4-26-06.pdf">April 2006</a>,
+	<a href="minutes/Twin_Creeks_Homeowner_Mtg_Min_3-29-06.pdf">March 2006</a>,
+	<a href="minutes/Twin_Creeks_Homeowner_Mtg_Min_2-15-06.pdf">February 2006</a>
 </p>
 
 <h3>2005</h3>
 <p>
-	<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%2011-30.pdf">November 2005</a>,
-	<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%2010-26-05.pdf">October 2005</a>
+	<a href="minutes/Twin%20Creeks%20Homeowner%20Mtg%20Min%2011-30.pdf">November 2005</a>,
+	<a href="minutes/Twin%20Creeks%20Homeowner%20Mtg%20Min%2010-26-05.pdf">October 2005</a>
 </p>
 
 <h3>Other documents</h3>
