Moving some other documents around.

--- a/events.html
+++ b/events.html
@@ -452,7 +452,7 @@ the following email links.</font></b></p>
 						Homeowner Directory has been delivered.&nbsp; If you 
 						would like to have your information posted in 
 						the directory, please fill out the 
-						<a href="Registration%20Form.pdf">Directory 
+						<a href="documents/Registration%20Form.pdf">Directory 
 						Registration Form</a>. We are also looking for 
 						residents to participate on the Directory 
 						Committee, if you are interested contact a
