--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ and suggestions.</p>
 				For additional information, please visit: <a href="http://www.ekirkpatrick.com/">www.ekirkpatrick.com</a>			
 			</p>
 			<ul>
-				<li><a href="IntroLetter.pdf">Welcome Letter</a></li>
-				<li><a href="Kirkpatrick%20Neighbor%20letter.pdf">Kirkpatrick Chosen</a></li>
+				<li><a href="documents/IntroLetter.pdf">Welcome Letter</a></li>
+				<li><a href="documents/Kirkpatrick%20Neighbor%20letter.pdf">Kirkpatrick Chosen</a></li>
 			</ul>
 			
 		</div>
