--- a/minutes-bylaws.html
+++ b/minutes-bylaws.html
@@ -62,9 +62,9 @@ title: Minutes &amp; Bylaws
 
 <h3>Other documents</h3>
 <p>
-	<a href="2009%20Arch%20Form.pdf">New Architectural Form</a>,
-	<a href="IntroLetter.pdf">New Management</a>,
-	<a href="April%20Budget%202009.pdf">Apr 2009 Budget Added</a>,
-	<a href="July2009.pdf">July 2009 Financial Doc</a>
+	<a href="documents/2009%20Arch%20Form.pdf">New Architectural Form</a>,
+	<a href="documents/IntroLetter.pdf">New Management</a>,
+	<a href="documents/April%20Budget%202009.pdf">Apr 2009 Budget Added</a>,
+	<a href="documents/July2009.pdf">July 2009 Financial Doc</a>
 </p>
 
