--- a/new-residents.html
+++ b/new-residents.html
@@ -128,7 +128,7 @@ Reader free at </font>
 	<tr>
 		<td width="373"><a href="2009%20Arch%20Form.pdf">Architectural Approval 
 		Form</a></td>
-		<td><a href="Registration%20Form.pdf">Directory Registration</a></td>
+		<td><a href="documents/Registration%20Form.pdf">Directory Registration</a></td>
 	</tr>
 	<tr>
 		<td width="373">
