--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,7 @@ substantially in accordance with the Covenant Declaration and the original
 	other action is approved by the Architectural Committee. Any repair 
 or alteration that is not in accordance with the original house plans 
 must be pre-approved by sending in an
-<a href="2009%20Arch%20Form.pdf">Architectural Approval Form</a>. 
+<a href="documents/2009%20Arch%20Form.pdf">Architectural Approval Form</a>. 
 Please <a href="mailto:wyattsmt@aol.com">email the Board</a> 
 with any questions prior to beginning repairs or alterations.</p>
 
@@ -116,6 +116,6 @@ with any questions prior to beginning repairs or alterations.</p>
 	<p>Forms are in PDF Format, please click on appropriate form and 
 		print out as needed.</p>
 	<ul>
-		<li><a href="2009%20Arch%20Form.pdf">Architectural Approval</a></li>
-		<li><a href="Registration%20Form.pdf">Directory Form</a></li>
+		<li><a href="documents/2009%20Arch%20Form.pdf">Architectural Approval</a></li>
+		<li><a href="documents/Registration%20Form.pdf">Directory Form</a></li>
 	</ul>
