Updating file paths.

--- a/faq.html
+++ b/faq.html
@@ -48,7 +48,7 @@ tips and overall general information we have found useful.</p>
 	
 	<dt>How can I get more involved in my neighborhood?</dt>
 	<dd><p>You can run for a TCHOA Board position, volunteer for a committee or 
-	volunteer as a Block Capitan. Please contact any <a href="Board.htm">
+	volunteer as a Block Capitan. Please contact any <a href="board.html">
 	Board Member</a> for more information.</p></dd>
 	
 	<dt>Is there a neighborhood newsletter and how frequently is it published?</dt>
