Updating file paths and starting to clean up.

--- a/events.html
+++ b/events.html
@@ -3,9 +3,11 @@ layout: inside
 category: events
 title: Events
 ---
-&nbsp;<p><u><b>
-<font face="Futura Md BT" size="3" color="#336699">2009 Halloween Party
-</font></b></u></p>
+
+<h3>Past Twin Creeks HOA Events</h3>
+
+<h4>2009 Halloween Party</h4>
+
 <p><font face="sans-serif" size="2">Thank you to all the neighbors who 
 participated in the Halloween party. Special thanks to Elise Kushigian 
 and Clowes Hall for their generous donation of 4 tickets to the 
@@ -456,7 +458,7 @@ the following email links.</font></b></p>
 						Registration Form</a>. We are also looking for 
 						residents to participate on the Directory 
 						Committee, if you are interested contact a
-						<a href="Board.htm">Board Member</a>.</font></p>
+						<a href="board.html">Board Member</a>.</font></p>
 						</font>
 						<p>
 						&nbsp;</p>
@@ -481,7 +483,7 @@ the following email links.</font></b></p>
 						social activities throughout the year for both 
 						children and adults, but we need participation. 
 						If you are interested in any of the following and would like to 
-						volunteer, please contact a <a href="Board.htm">
+						volunteer, please contact a <a href="board.html">
 						Board Member</a>.&nbsp; The TCHOA will provide the 
 						necessary funds, we need you to provide the 
 						ideas and planning! Activities and current ideas include:</font></p>
