--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@ and suggestions.</p>
 		<h3>Neighborhood News</h3>
 			
 		<div class="section">
+			<div class="alert">
+				<h4>Annual Neighborhood Garage Sale</h4>
+				
+				<p>Our annual neighborhood garage sale will be Friday, May 31 and Saturday, June 1 starting at 8AM.</p>
+			</div>
+			
 			<h4>Important Information Concerning Neighborhood Walk-thru and Inspections</h4>
 			
 			<p>In an effort 
